fixing spacing issues in css

--- a/index.css
+++ b/index.css
@@ -5,65 +5,57 @@
 }
 
 html, body {
-    font-family: 'Times New Roman', Times, serif;
-    width: 100%;
-    height: 100%;
-    }
-    body {
-        margin: 0;
-        padding: 0;
-        }
-
-        nav {
-          width: 100%;
-          background-color: black;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-        }
-        .logo {
-          display: inline-block;
-        }
-      
-        .logo img {
-          width: 100px;
-          padding-left: 30px;
-          padding-bottom: 10px;
-          vertical-align: middle;
-        }
-        
-        .nav-links {
-          list-style: none;
-          display: flex;
-        }
-        
-        .nav-item a {
-          display: inline-block;
-          padding: 15px 40px;
-          font-size: x-large;
-          text-decoration: none;
-          color: white;
-        }
-        
-        .nav-item:hover {
-          background-color: #76C3BA;
-        }
-        
-        .nav-item:hover a {
-          color: white;
-        }
-  
-  .content {
-    padding: 16px;
+  font-family: 'Times New Roman', Times, serif;
+  width: 100%;
+  height: 100%;
   }
+body {
+  margin: 0;
+  padding: 0;
+  }
+
+nav {
+  width: 100%;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  display: inline-block;
+}
+
+.logo img {
+  width: 100px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  vertical-align: middle;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+}
+
+.nav-item a {
+  display: inline-block;
+  padding: 15px 40px;
+  font-size: x-large;
+  text-decoration: none;
+  color: white;
+}
+
+.nav-item:hover {
+  background-color: #76C3BA;
+}
   
-  .sticky {
+.sticky {
     position: fixed;
     top: 0;
     width: 100%;
   }
   
-  .sticky + .content {
+.sticky + .content {
     padding-top: 102px;
   }
 
