--- a/location.css
+++ b/location.css
@@ -3,38 +3,36 @@ html, body {
     width: 100%;
     height: 100%;
     }
-    body {
-        margin: 0;
-        padding: 0;
+body {
+    margin: 0;
+    padding: 0;
     }
-    
-  .content {
-    padding: 16px;
-  }
-  nav {
+
+nav {
     width: 100%;
     background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  .logo {
+
+.logo {
     display: inline-block;
   }
 
-  .logo img {
+.logo img {
     width: 100px;
     padding-left: 30px;
     padding-bottom: 10px;
     vertical-align: middle;
   }
-  
-  .nav-links {
+
+.nav-links {
     list-style: none;
     display: flex;
   }
   
-  .nav-item a {
+.nav-item a {
     display: inline-block;
     padding: 15px 40px;
     font-size: x-large;
@@ -42,21 +40,17 @@ html, body {
     color: white;
   }
   
-  .nav-item:hover {
+.nav-item:hover {
     background-color: #76C3BA;
   }
-  
-  .nav-item:hover a {
-    color: white;
-  }
-  
-  .sticky {
+ 
+.sticky {
     position: fixed;
     top: 0;
     width: 100%;
   }
   
-  .sticky + .content {
+.sticky + .content {
     padding-top: 102px;
   }
 
